--- a/src/assets/styles/cmps/MinFilter.scss
+++ b/src/assets/styles/cmps/MinFilter.scss
@@ -66,3 +66,10 @@
     margin-right: 20px;
   }
 }
+
+
+@media (max-width:860px) {
+  .min-filter{ ///need fix it!
+    display: none;
+  }
+}
