--- a/src/assets/styles/cmps/StayList.scss
+++ b/src/assets/styles/cmps/StayList.scss
@@ -40,8 +40,3 @@
   }
 }
 
-@media(max-width:870px) {
-  .stay-list {
-    row-gap: 100px;
-  }
-}
